Fix/260 271 favourite by author interact edit course (#233)
* header to check

* fix header

* Add author settings frontend

* fix pixels

* add service, contoller to course

* logo

* save before pulling dev

* pull develop

* Add backend

* model shareble components

* Finish author settings

* Fixed

* Fixed cards layout when less than 3.
Fixed cropped lines at path cards added ellipsis on text overflow more than 2 lines.

* Suppressed inspection

* Frontend part of the add path page

* add logic for adding course

* to push

* to push

* before pull

* remove redundantname from lecture

* fix migration

* Added common component TagSelector

* fix auth in routing

* fix merge  mistake course service

* commmit before pull dev

* commit before pulling dev

* fix merge mistakes

* front part of adding lecture, fix bugs of adding course

* merge feature/33-add-lecture-modal to dev

* before pulling dev

* to pull

* before pulling dev

* before pull dev

* change vlaidation notifications, change get lecture duration from mock to real

* small style fixes

* change lecture create request from mixed to single multipart file, change requests due to handling userId on server

* start sender folder added

* fix flow upload lecture

* start files emailservice

* added email sender

* emailservice + resetpassword

* before pull dev

* commit before merge from dev

* remove header, add required field to test app properties

* add confirming registration email, add handler uploading non-pictures files to avatar in author and student settings pages

* component addToFavourite with front and back logic added

* style fixes

* added favourites screen, favourite courses, change ui of addtofaavourite button

* feature favourite page

* small auth acceptance fixes

* Update PathMapper.java

* Update styles.module.sass

* change fething data from db to favourite page

* fix ge

--- a/frontend/src/screens/AddCourse/components/LectureCard/styles.module.sass
+++ b/frontend/src/screens/AddCourse/components/LectureCard/styles.module.sass
@@ -41,6 +41,7 @@
     align-self: center
     justify-self: flex-end
     color: white
+    font-size: 0.8em
 
 \:global(.ui.basic.label).toolBarIcon
   background: inherit
